export enum RobotStatus {
    Active = 'Active',
    Inactive = 'Inactive',
    Maintenance = 'Maintenance',
    Inhibited = 'Inhibited'
}