
export enum Roomtype {
Gabinete='gabinete',
Laboratorio='laboratorio',
Ànfiteatro='ànfiteatro',
Outro='outro'
}
