export enum TypeTask {
    DELIVERY = 'Delivery',
    VIGILANCE = 'Vigilance'
}